<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_page_header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.3"
        android:background="@drawable/main_page_header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgSimformLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/simformlogo"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.5"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/main_page_header_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:hintAnimationEnabled="true"
        >

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/Login_Layout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:animateLayoutChanges="true"
           android:visibility="invisible"
           >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailAddressLogin"
                android:hint="@string/hint_username"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/edittext_shadow"
                style="@style/HintText"
                android:imeOptions="actionNext"
                />
          <com.google.android.material.textfield.TextInputLayout
              app:passwordToggleEnabled="true"
              app:passwordToggleTint="@color/Teal"
              app:hintEnabled="false"
              app:counterEnabled="true"
              android:id="@+id/password_layout"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="20dp"
              app:layout_constraintTop_toBottomOf="@+id/txtEmailAddressLogin"
              app:layout_constraintStart_toStartOf="@id/txtEmailAddressLogin"
              app:layout_constraintEnd_toEndOf="@id/txtEmailAddressLogin"
              >
              <com.google.android.material.textfield.TextInputEditText
                  android:id="@+id/txtPassword"
                  android:hint="@string/hint_Password"
                  android:imeOptions="actionNext"
                  style="@style/HintText"
                  android:background="@drawable/edittext_shadow"
                  android:inputType="textPassword"
                  />
          </com.google.android.material.textfield.TextInputLayout>

           <TextView
               android:id="@+id/btnForgetPassword"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="20dp"
               android:layout_marginRight="30dp"
               app:layout_constraintTop_toBottomOf="@id/password_layout"
               app:layout_constraintRight_toRightOf="parent"
               android:text="@string/btn_forget_password_text"
               android:textColor="#077Aff"
               />

           <Button
               android:id="@+id/btnLogin"
               android:layout_width="150dp"
               android:layout_height="35dp"
               app:layout_constraintTop_toBottomOf="@id/btnForgetPassword"
               android:layout_marginTop="20dp"
               app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintLeft_toLeftOf="parent"
               android:text="@string/btn_Login_Text"
               android:textColor="@color/White"
               android:background="@drawable/customised_buttons"
               android:textSize="20sp"
               android:fontFamily="@font/helvetica"
               />

       </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_page_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/main_page_footer"
        >

        <Button
            android:id="@+id/btnLoginFooter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="150dp"
            android:layout_marginLeft="35dp"
            android:layout_height="35dp"
            android:text="@string/btn_Login_Text"
            android:background="@drawable/customised_buttons"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:fontFamily="@font/helvetica"
            />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="150dp"
            android:layout_height="35dp"
            android:text="@string/btn_SignUp_text"
            android:background="@drawable/customised_buttons"
            app:layout_constraintStart_toEndOf="@id/btnLoginFooter"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="35dp"
            android:textColor="@color/White"
            android:textSize="20sp"
            android:fontFamily="@font/helvetica"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>