<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP_Screen">

    <LinearLayout
        android:id="@+id/otpScreenHeader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/Teal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHeight_percent="0.095"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_screen_header"
            android:textColor="@color/White"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/optMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_email_for_otp"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/otpScreenHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/otpDigitOne"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:maxLength="1"
        app:layout_constraintWidth_percent="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optMessage"
        app:layout_constraintEnd_toStartOf="@+id/otpDigitTwo"
        android:inputType="number"
        android:gravity="center"
        android:imeOptions="actionNext"
        style="@style/Widget.AppCompat.EditText"
        android:background="@drawable/edittext_shadow"
        />

    <EditText
        android:id="@+id/otpDigitTwo"
        android:inputType="number"
        android:background="@drawable/edittext_shadow"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        app:layout_constraintWidth_percent="0.2"
        android:maxLength="1"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/otpDigitOne"
        app:layout_constraintTop_toBottomOf="@id/optMessage"
        app:layout_constraintEnd_toStartOf="@+id/otpDigitThree"
        android:imeOptions="actionNext"
        style="@style/Widget.AppCompat.EditText"
        />

    <EditText
        android:id="@+id/otpDigitThree"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:inputType="number"
        android:layout_marginTop="70dp"
        app:layout_constraintWidth_percent="0.2"
        android:maxLength="1"
        android:background="@drawable/edittext_shadow"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/otpDigitTwo"
        app:layout_constraintTop_toBottomOf="@id/optMessage"
        app:layout_constraintEnd_toStartOf="@+id/otpDigitFour"
        android:imeOptions="actionNext"
        style="@style/Widget.AppCompat.EditText"
        />

    <EditText
        android:id="@+id/otpDigitFour"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:inputType="number"
        android:background="@drawable/edittext_shadow"
        android:layout_marginTop="70dp"
        app:layout_constraintWidth_percent="0.2"
        android:maxLength="1"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/otpDigitThree"
        app:layout_constraintTop_toBottomOf="@id/optMessage"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.AppCompat.EditText"
        />

    <Button
        android:id="@+id/btnSubmitOTP"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_submit_text"
        android:textColor="@color/White"
        android:textSize="20sp"
        android:layout_marginTop="30dp"
        android:background="@drawable/customised_buttons"
        app:layout_constraintTop_toBottomOf="@id/otpDigitTwo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>